# 2020Fall-CG

./: README.md
Final/code/: CMakeLists.txt  run_all.sh
Final/code/include/: camera.hpp  group.hpp  hit.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  photon.hpp  photonMapping.hpp  plane.hpp  ray.hpp  scene_parser.hpp  sphere.hpp  tiny_obj_loader.h  transform.hpp  triangle.hpp
Final/code/src/: image.cpp  main.cpp  mesh.cpp  scene_parser.cpp
PA0/code/include/: element.hpp
PA0/code/src/: main.cpp
PA1/: try  try.cpp
PA1/code/include/: camera.hpp  group.hpp  material.hpp  plane.hpp  sphere.hpp  transform.hpp  triangle.hpp
PA1/code/src/: main.cpp  mesh.cpp
PA1/code/testcases/: scene05_try.txt
PA2/: main  try.cpp
PA2/code/include/: group.hpp  material.hpp  mesh.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA2/code/src/: main.cpp  mesh.cpp
